--- a/package.json
+++ b/package.json
@@ -8,7 +8,6 @@
   "scripts": {
     "start": "node server/server.js",
     "heroku-postbuild": "yarn run build:prod",
-    "serv": "live-server public/",
     "dev": "webpack-dev-server",
     "build:dev": "webpack",
     "build:prod": "webpack -p --env production",
@@ -23,13 +22,8 @@
     "babel-preset-env": "1.5.2",
     "babel-preset-react": "6.24.1",
     "css-loader": "0.28.7",
-    "enzyme": "3.2.0",
-    "enzyme-adapter-react-16": "^1.1.0",
-    "enzyme-to-json": "3.2.2",
     "express": "4.16.0",
     "extract-text-webpack-plugin": "3.0.2",
-    "jest": "21.2.1",
-    "live-server": "^1.2.0",
     "moment": "2.19.1",
     "node-sass": "4.5.3",
     "raf": "3.4.0",
@@ -40,13 +34,19 @@
     "react-modal": "3.0.4",
     "react-redux": "5.0.6",
     "react-router-dom": "4.2.2",
-    "react-test-renderer": "16.1.1",
     "redux": "3.7.2",
     "sass-loader": "6.0.6",
     "style-loader": "0.19.0",
     "uuid": "3.1.0",
     "validator": "9.0.0",
-    "webpack": "3.8.1",
+    "webpack": "3.8.1"
+  },
+  "devDependencies": {
+    "enzyme": "3.2.0",
+    "enzyme-adapter-react-16": "^1.1.0",
+    "enzyme-to-json": "3.2.2",
+    "jest": "21.2.1",
+    "react-test-renderer": "16.1.1",
     "webpack-dev-server": "2.5.1"
   }
 }
