--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "dev": "webpack-dev-server",
     "build:dev": "webpack",
     "build:prod": "webpack -p --env production",
-    "test": "jest --config=jest.config.json --watchAll"
+    "test": "cross-env NODE_ENV=test jest --config=jest.config.json --watchAll"
   },
   "dependencies": {
     "babel-cli": "6.24.1",
@@ -24,6 +24,7 @@
     "css-loader": "0.28.7",
     "express": "4.16.0",
     "extract-text-webpack-plugin": "3.0.2",
+    "firebase": "4.6.2",
     "moment": "2.19.1",
     "node-sass": "4.5.3",
     "numeral": "2.0.6",
@@ -36,6 +37,8 @@
     "react-redux": "5.0.6",
     "react-router-dom": "4.2.2",
     "redux": "3.7.2",
+    "redux-mock-store": "1.3.0",
+    "redux-thunk": "2.2.0",
     "sass-loader": "6.0.6",
     "style-loader": "0.19.0",
     "uuid": "3.1.0",
@@ -43,6 +46,8 @@
     "webpack": "3.8.1"
   },
   "devDependencies": {
+    "cross-env": "5.1.1",
+    "dotenv": "4.0.0",
     "enzyme": "3.2.0",
     "enzyme-adapter-react-16": "^1.1.0",
     "enzyme-to-json": "3.2.2",
